# artfinder

./: .gitignore  Barcikowski.json  README.md  REST.ipynb  artfinder-tests.ipynb  articles.csv  articles1.csv  base_articles.csv  citation_counts.ipynb  cross_ref_query_data.ipynb  cross_ref_tests.ipynb  crossref_base_analysis.ipynb  crossref_get_fuul_texts.ipynb  crossref_get_refs.ipynb  crossref_getting_refs.ipynb  crossref_merge.ipynb  crossref_query_data.ipynb  data_filtering.ipynb  downlad_full_texts.ipynb  full_text_links.csv  get_pubmed_data.ipynb  kabashin.json  no_nps_in_abstract.csv  pymedx.ipynb  pymedx.py  pyproject.toml  requests.ipynb  scholarly.ipynb  test.py  test2.py  test3.py  urllib.ipynb
.ipynb_checkpoints/: artfinder-tests-checkpoint.ipynb  crossref_get_refs-checkpoint.ipynb
artfinder/: __init__.py  api.py  article.py  crossref.py  crossref_helpers.py  dataclasses.py  helpers.py  http_requests.py  pubmed.py
cross_ref/: citation_counts.ipynb  cross_ref_tests.ipynb  crossref-api-demo.ipynb  habanero.ipynb  kaba.csv
database/: barcikowski.csv  base_experimental.csv
database/processed/: barcikowski.xlsx  barcikowski_full.csv  kabashin.xlsx  kabashin_full.csv
examples/: Search.ipynb
https_py_3_12/: client.py  server.py  symmetric_client.py  tst.py
pymedx_custom/: __init__.py  api.py  article.py  helpers.py  pubmed_article_example.xml
rsc/: pubmed_article_export_example.xml
src/artfinder/: __about__.py  __init__.py  api.py  article.py  article_pdf.py  crossref.py  dataclasses.py  helpers.py  scimagojr.py
tests/: __init__.py  pytest.ini
tests/test_article_pdf/: test_article_pdf_init.py  test_figure_captions.py  test_figure_rectangles.py
tests/test_article_pdf/article_pdfs/: all_fig_captions.json  figure_rects.json
