[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artfinder"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Anton Popov", email = "a.popov.fizteh@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "aiohttp",
  "requests",
  "pymupdf",
  "scikit-learn",
  "pyiso4",
]

[project.urls]
Documentation = "https://github.com/Kaldarinz/artfinder#readme"
Issues = "https://github.com/Kaldarinz/artfinder/issues"
Source = "https://github.com/Kaldarinz/artfinder"

[tool.hatch.version]
path = "src/artfinder/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/artfinder tests}"

[tool.coverage.run]
source_pkgs = ["artfinder", "tests"]
branch = true
parallel = true
omit = ["src/artfinder/__about__.py"]

[tool.coverage.paths]
artfinder = ["src/artfinder", "*/artfinder/src/artfinder"]
tests = ["tests", "*/artfinder/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = [
  "ignore:.*SwigPy.*has no __module__ attribute:DeprecationWarning",
  "ignore:.*swigvarlink.*has no __module__ attribute:DeprecationWarning",
]
  
[tool.hatch.build.targets.wheel]
artifacts = [
  "data/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "data/**",
]
